--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -9,10 +9,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 25px;
   margin-bottom: 20px;
-  border: initial;
   background: #fff;
-  border-radius: calc(.15rem - 1px);
-  box-shadow: 0 1px 15px rgba(0,0,0,0.04), 0 1px 6px rgba(0,0,0,0.04);
 }
 
 .todo-item {
@@ -33,11 +30,9 @@ body {
 
 .checker {
   margin-right: 10px;
-
 }
 .checker:hover {
   cursor: pointer;
-  
 }
 
 .todo-item span {
@@ -52,74 +47,40 @@ body {
   margin: 10px 0;
 }
 
-.todo-list.only-active .todo-item.complete {
-  display: none;
-}
-
-.todo-list.only-active .todo-item:not(.complete) {
-  display: block;
-}
-
-.todo-list.only-complete .todo-item:not(.complete) {
-  display: none;
-}
-
-.todo-list.only-complete .todo-item.complete {
-  display: block;
-}
+.todo-list.only-active .todo-item.complete { display: none; }
+.todo-list.only-active .todo-item:not(.complete) { display: block; }
+.todo-list.only-complete .todo-item:not(.complete) { display: none; }
+.todo-list.only-complete .todo-item.complete { display: block; }
 
 .remove-todo-item {
   color: #ccc;
 }
-
 .remove-todo-item:hover {
   color: #5f5f5f;
 }
 
-.todo-item:hover .remove-todo-item {
-  visibility: visible;
+.todo-item:hover .remove-todo-item { visibility: visible; }
+
+div.checker, div.checker input, div.checker span { width: 18px; height: 18px; cursor: pointer; }
+
+/* ======================= Lists Sidebar ======================= */
+.list-of-lists li {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
 }
 
-div.checker {
-  width: 18px;
-  height: 18px;
-    cursor: pointer;
-
+.list-of-lists li span {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 5px;
 }
 
-div.checker input,
-div.checker span {
-  width: 18px;
-  height: 18px;
-    cursor: pointer;
-
-}
-
-div.checker span {
-  display: -moz-inline-box;
-  display: inline-block;
-  zoom: 1;
-  text-align: center;
-  background-position: 0 -260px;
-}
-
-div.checker, div.checker input, div.checker span {
-  width: 19px;
-  height: 19px;
-}
-
-div.checker, div.radio, div.uploader {
-  position: relative;
-}
-
-div.button, div.button *, div.checker, div.checker *, div.radio, div.radio *, div.selector, div.selector *, div.uploader, div.uploader * {
-  margin: 0;
-  padding: 0;
-}
-
-div.button, div.checker, div.radio, div.selector, div.uploader {
-  display: -moz-inline-box;
-  display: inline-block;
-  zoom: 1;
-  vertical-align: middle;
+.list-of-lists li div {
+  display: flex;
+  gap: 5px;
+  flex-wrap: wrap;
 }
